--- a/Prueba_NET/Prueba_ASP.Web/Views/Shared/_Layout.cshtml
+++ b/Prueba_NET/Prueba_ASP.Web/Views/Shared/_Layout.cshtml
@@ -1,13 +1,16 @@
-﻿<!DOCTYPE html>
+﻿    <!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
-    <script src="~/Scripts/bootstrap.min.js"></script>
-    <script src="~/Scripts/jquery-3.3.1.min.js"></script>
-    <script src="~/Scripts/jquery-3.3.1.js"></script>
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <script src="~/Scripts/plugins/DataTables/js/jquery-3.3.1.js"></script>
+    <script src="~/Scripts/plugins/DataTables/js/jquery-3.3.1.min.js"></script>
+    <script src="~/Scripts/plugins/DataTables/js/jquery.dataTables.js"></script>
+    <link href="~/Content/Site.css" rel="stylesheet" />
+    <link href="~/Scripts/plugins/DataTables/css/jquery.dataTables.min.css" rel="stylesheet" />
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -29,6 +32,7 @@
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Municipio", "Index", "Municipio")</li>
+                    <li>@Html.ActionLink("Region", "Index", "Region")</li>
                 </ul>
             </div>
         </div>
@@ -44,5 +48,8 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/plugins/DataTables/js/jquery.dataTables.min.js"></script>
 </body>
 </html>
